# dns

./: .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  dryrun.yaml  test-and-lint.yaml  tests.yaml
dns/: dns.yaml
dns/zones/: djtc.me.yaml  domchester.co.uk.yaml  domchester.com.yaml  domchestersound.co.uk.yaml  domchestersound.com.yaml
