[tool.poetry]
name = "dns"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
octodns = "^1.10.0"
octodns-cloudflare = "^0.0.7"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.typos]
default.extend-words = { }